<resources>
    <string name="app_name">Desafio android</string>
    <string name="open_close_pulls"><font color="#01C6DB">%d opened</font> / %d closed</string>
    <string name="description_not_found">Description not found</string>
    <string name="image_error_recharge">Toque imagem para recarregar</string>
    <string name="list_pull_request_empty">Não foi encontrado nenhum pull request para este repositório</string>
    <string name="title_pull_request">Titulo pull request</string>
    <string name="description_pull_request">Mussum Ipsum, cacilds vidis litro abertis. Manduma pindureta quium dia nois
        paga.
    </string>
    <string name="username_pull_request">username</string>
    <string name="full_name_pull_request">Nome Sobrenome</string>
    <string name="name_repository">Nome Repositório</string>
    <string name="description_repository">Mussum Ipsum, cacilds vidis litro abertis. Manduma pindureta quium dia nois
        paga.
    </string>
    <string name="forks_repository">640</string>
    <string name="stars_repository">640</string>
    <string name="username_repository">username</string>
    <string name="full_name_repository">Nome Sobrenome</string>
    <string name="title_toolbar_repository">Github JavaPop</string>

    <!--content description repository-->
    <string name="picture_owner_repository">Imagem do dono do repositório</string>
    <string name="picture_owner_pull_request">Imagem do dono do pull request</string>
    <string name="list_pull_request_empyt_description">Imagem de erro</string>
</resources>
