<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/clItemRespository"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvRepositoryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/name_repository"
            android:textColor="@color/steelBlue"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvRepositoryDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/description_repository"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="@+id/tvRepositoryName"
            app:layout_constraintTop_toBottomOf="@+id/tvRepositoryName" />

        <TextView
            android:id="@+id/tvRepositoryForks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/forks_repository"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/ic_forks"
            app:layout_constraintStart_toStartOf="@id/tvRepositoryDescription"
            app:layout_constraintTop_toBottomOf="@+id/tvRepositoryDescription" />

        <TextView
            android:id="@+id/tvRepositoryStars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/stars_repository"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/ic_star"
            app:layout_constraintBottom_toBottomOf="@+id/tvRepositoryForks"
            app:layout_constraintStart_toEndOf="@+id/tvRepositoryForks"
            app:layout_constraintTop_toTopOf="@+id/tvRepositoryForks" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivRepositoryAvatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/picture_owner_repository"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@+id/tvRepositoryName" />

        <TextView
            android:id="@+id/tvRepositoryUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/username_repository"
            android:textAlignment="center"
            android:textColor="@color/steelBlue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/ivRepositoryAvatar" />

        <TextView
            android:id="@+id/tvRepositoryFullName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/full_name_repository"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tvRepositoryUserName" />

        <View
            android:id="@+id/vSeparatorRepo"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/mercury"
            app:layout_constraintTop_toBottomOf="@+id/tvRepositoryStars" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>