<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_pull_request_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvPullRequestName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/title_pull_request"
            android:textColor="@color/steelBlue"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPullRequestDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/description_pull_request"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="@+id/tvPullRequestName"
            app:layout_constraintTop_toBottomOf="@+id/tvPullRequestName" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivPullRequestAvatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/picture_owner_pull_request"
            app:layout_constraintStart_toStartOf="@+id/tvPullRequestDescription"
            app:layout_constraintTop_toBottomOf="@+id/tvPullRequestDescription" />

        <TextView
            android:id="@+id/tvPullRequestUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="4dp"
            android:text="@string/username_pull_request"
            android:textAlignment="center"
            android:textColor="@color/steelBlue"
            app:layout_constraintStart_toStartOf="@+id/ivPullRequestAvatar"
            app:layout_constraintTop_toTopOf="@+id/ivPullRequestAvatar" />

        <TextView
            android:id="@+id/tvPullRequestFullName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/full_name_pull_request"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/ivPullRequestAvatar"
            app:layout_constraintStart_toStartOf="@+id/tvPullRequestUserName"
            app:layout_constraintTop_toBottomOf="@+id/tvPullRequestUserName" />

        <View
            android:id="@+id/vSeparatorPull"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/mercury"
            app:layout_constraintTop_toBottomOf="@+id/ivPullRequestAvatar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>